lessons/193/14-example/0-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
  labels:
    team: dev1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - image: aputra/myapp-193:v6
          name: my-container-1
          ports:
            - containerPort: 8080
